# cscs

./: .gitignore  cscs_db.py  essai.py  main.py  pyproject.toml  qml.qrc  rc_qml.py  requirements.txt  settings.py  tst_mainwindow.qml
CSCS/: AbilityDelegate.qml  AbilityListModel.py  AbilityModel.py  AbilityView.qml  CSDirectoryTreeDelegate.qml  Main.qml  RankedAbilityView.qml  cscs_db.qmltypes  cscs_db_qmltyperegistrations.cpp  cscs_dbmetatypes.json  csdirectory_model.py  csdirectory_model.qmltypes  csdirectory_model_qmltyperegistrations.cpp  csdirectory_modelmetatypes.json  qmldir  rankedability_model.py  roles_model.py
src/cscs/: AbilityTab.qml  cscg_main.py  cscs_db.py  db-202503071155.sqlite3  db.sqlite3  django_json_csv.py  gridtest.py  gridtest2.py  main.py  models.py  output.csv  settings.py  testconnection.py  views.py
src/cscs/db/: cscs_db.sqlite3.sql  db.sqbpro
src/cscs/locales/: cscs.pot
src/cscs/qt/: .ability_rank_dialog.py.kate-swp  AbilityListItem_form.ui  Cypher_System_Character_Sheet_fr_FR.ts  FlavorView.qml  abilityListItem_form.py  ability_form.py  ability_form.ui  ability_model.py  ability_rank_dialog.py  ability_ui.py  ability_widgets.py  abilitylistitem_form.py  charactertemplate_form.py  charactertemplate_form.ui  charactertemplate_ui.py  charactertemplatetypeflavorview.py  charactertype_ui.py  common_ui.py  cscs_ui.py  descriptor_ui.py  dialog_selectrankedability.py  dialog_selectrankedability.ui  dialog_selecttypeflavor.py  dialog_selecttypeflavor.ui  dialog_selectuniquerankedability.py  dialog_selectuniquerankedability.ui  flavor_tab.py  (+12 more)
(+2 files in other folders)
